--- a/cup-vue/package.json
+++ b/cup-vue/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "cup-vue",
+    "name": "cup",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -11,6 +11,7 @@
         "core-js": "^3.6.4",
         "countup": "^1.8.2",
         "element-ui": "^2.13.0",
+        "nprogress": "^0.2.0",
         "qs": "^6.9.2",
         "vue": "^2.6.11",
         "vue-axios": "^2.1.5",
