--- a/cup/pom.xml
+++ b/cup/pom.xml
@@ -60,11 +60,6 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency>
-
         <!--   jwt依赖     -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
@@ -82,6 +77,13 @@
             <artifactId>jjwt-jackson</artifactId>
             <version>0.10.5</version>
             <scope>runtime</scope>
+        </dependency>
+
+        <!--hutool工具类库-->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.3.1</version>
         </dependency>
 
 
