--- a/cup/src/main/resources/application.yml
+++ b/cup/src/main/resources/application.yml
@@ -19,10 +19,12 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/cup?serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/cup?characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: root
     password: root
     type: com.zaxxer.hikari.HikariDataSource
+  main:
+    allow-bean-definition-overriding: true
 
 
 mybatis-plus:
