--- a/cup-vue/package.json
+++ b/cup-vue/package.json
@@ -11,6 +11,7 @@
         "core-js": "^3.6.4",
         "countup": "^1.8.2",
         "element-ui": "^2.13.0",
+        "moment": "^2.26.0",
         "nprogress": "^0.2.0",
         "qs": "^6.9.2",
         "vue": "^2.6.11",
