--- a/cup/src/main/resources/application.yml
+++ b/cup/src/main/resources/application.yml
@@ -19,9 +19,9 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://49.233.209.183:3306/cup?characterEncoding=utf8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/cup?characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: root
-    password: 225010wu
+    password: root
     type: com.zaxxer.hikari.HikariDataSource
   main:
     allow-bean-definition-overriding: true
