--- a/cup/src/main/resources/application.yml
+++ b/cup/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
   security:
     loginType: JSON
 
+
   session:
     timeout: 30m
 
@@ -25,6 +26,19 @@ spring:
     type: com.zaxxer.hikari.HikariDataSource
   main:
     allow-bean-definition-overriding: true
+
+  # redis配置
+  redis:
+    host: localhost
+    password:
+    port: 6379
+
+# token配置
+token:
+  header: 'Authorization'
+  secret: '0123456789_0123456789_0123456789'
+  expireTime: 30
+
 
 
 mybatis-plus:
