--- a/cup/pom.xml
+++ b/cup/pom.xml
@@ -96,6 +96,18 @@
             <version>5.3.1</version>
         </dependency>
 
+        <!--为yml自定义属性自动生成提示-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+        </dependency>
+
+        <!--开发热加载工具-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
+
         <!--测试配置-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
