--- a/cup/pom.xml
+++ b/cup/pom.xml
@@ -122,9 +122,17 @@
             <scope>test</scope>
         </dependency>
 
+        <!--websocket-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
+        <!--jasypt安全框架,加密数据源-->
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <version>2.1.1</version>
         </dependency>
     </dependencies>
 
