--- a/cup/src/main/resources/application.yml
+++ b/cup/src/main/resources/application.yml
@@ -1,5 +1,11 @@
 server:
   port: 3001
+#  servlet:
+#    session:
+#      timeout: 20s  # SpringBoot默认session超时是1分钟，小于1分钟还是1分钟
+#      cookie:
+#        http-only: true #这样设置就不能通过js脚本获取cookie
+#        secure: true #只有https请求才会携带cookie
 
 
 spring:
@@ -9,6 +15,7 @@ spring:
     loginType: JSON
 
 
+  # 数据库配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://mysql:3306/cup?characterEncoding=utf8&serverTimezone=Asia/Shanghai
@@ -20,7 +27,7 @@ spring:
 
   # redis配置
   redis:
-    host: redis
+    host: localhost
     password:
     port: 6379
 
