--- a/cup/pom.xml
+++ b/cup/pom.xml
@@ -89,6 +89,13 @@
             <version>1.2.72</version>
         </dependency>
 
+        <!--druid数据源-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+
         <!--hutool工具类库-->
         <dependency>
             <groupId>cn.hutool</groupId>
