--- a/cup/pom.xml
+++ b/cup/pom.xml
@@ -97,6 +97,12 @@
             <version>1.2.2</version>
         </dependency>
 
+        <!--quartz定时任务框架-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
+        </dependency>
+
         <!--hutool工具类库-->
         <dependency>
             <groupId>cn.hutool</groupId>
@@ -115,10 +121,15 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
         </dependency>
 
-        <!--开发热加载工具-->
+        <!--开发热加载工具 和定时任务的类加载器有冲突-->
+        <!--<dependency>-->
+        <!--    <groupId>org.springframework.boot</groupId>-->
+        <!--    <artifactId>spring-boot-devtools</artifactId>-->
+        <!--</dependency>-->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
 
         <!--测试配置-->
