--- a/cup/src/main/resources/application.yml
+++ b/cup/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   application:
     name: cup
   profiles:
-    active: druid,quartz
+    active: druid,quartz,activiti
   security:
     loginType: JSON
   rabbitmq:
@@ -15,55 +15,6 @@ spring:
     username: guest
     password: guest
     virtual-host: /
-
-  # 数据库配置
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/cup?characterEncoding=utf8&serverTimezone=Asia/Shanghai
-    username: ENC(qPk24c9OuwPT2qYHnLIymA==)
-    password: ENC(xz3XtbFndmSVOsS+CBxqrQ==)
-    type: com.alibaba.druid.pool.DruidDataSource
-    # 连接池配置
-    druid:
-      # 初始化大小，最小，最大
-      initial-size: 5
-      min-idle: 5
-      max-active: 20
-      # 配置获取连接等待超时的时间
-      max-wait: 60000
-      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位毫秒
-      time-between-eviction-runs-millis: 60000
-      # 配置一个连接在池中最小生存时间
-      min-evictable-idle-time-millis: 300000
-      validation-query: SELECT 1 FROM sys_user
-      test-while-idle: true
-      test-on-borrow: false
-      test-on-return: false
-      # 打开 PSCache，并且指定每个连接上 PSCache 的大小
-      pool-prepared-statements: true
-      max-pool-prepared-statement-per-connection-size: 20
-      # 配置监控统计拦截的 Filter，去掉后监控界面 SQL 无法统计，wall 用于防火墙
-      filters: stat,wall
-      # 通过 connection-properties 属性打开 mergeSql 功能；慢 SQL 记录
-      connection-properties: druid.stat.mergeSql\=true;druid.stat.slowSqlMillis\=5000
-      # 配置 DruidStatFilter
-      web-stat-filter:
-        enabled: true
-        url-pattern: /*
-        exclusions: .js,*.gif,*.jpg,*.bmp,*.png,*.css,*.ico,/druid/*
-      # 配置 DruidStatViewServlet
-      stat-view-servlet:
-        enabled: true
-        url-pattern: /druid/*
-        # IP 白名单，没有配置或者为空，则允许所有访问
-        allow: 127.0.0.1
-        # IP 黑名单，若白名单也存在，则优先使用
-        deny: 192.168.31.253
-        # 禁用 HTML 中 Reset All 按钮
-        reset-enable: false
-        # 登录用户名/密码
-        login-username:
-        login-password:
 
   main:
     allow-bean-definition-overriding: true
@@ -92,8 +43,6 @@ mybatis-plus:
 #  level:
 #    org.springframework.security: DEBUG
 
-
-
 cup:
   # 是否开启演示模式
   enableDemo: false
@@ -114,6 +63,5 @@ cup:
 jasypt:
   encryptor:
     password: mQjEGflOtK9YuwOS
-
 
 
