--- a/cup/pom.xml
+++ b/cup/pom.xml
@@ -16,6 +16,7 @@
     <version>1.0</version>
 
     <properties>
+        <skipTests>true</skipTests>
         <!-- 文件拷贝时的编码 -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
