--- a/cup/src/main/resources/application-druid.yml
+++ b/cup/src/main/resources/application-druid.yml
@@ -1,9 +1,9 @@
 spring:
   # 数据库配置
   datasource:
-    
+
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/cup?characterEncoding=utf8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/cup?characterEncoding=utf8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
     username: ENC(qPk24c9OuwPT2qYHnLIymA==)
     password: ENC(xz3XtbFndmSVOsS+CBxqrQ==)
     type: com.alibaba.druid.pool.DruidDataSource
