--- a/cup-vue/package.json
+++ b/cup-vue/package.json
@@ -13,6 +13,7 @@
         "core-js": "^3.6.4",
         "countup": "^1.8.2",
         "element-ui": "^2.13.2",
+        "js-cookie": "^3.0.0",
         "moment": "^2.29.1",
         "nprogress": "^0.2.0",
         "qs": "^6.9.2",
