--- a/cup-vue/package.json
+++ b/cup-vue/package.json
@@ -14,6 +14,7 @@
         "countup": "^1.8.2",
         "element-ui": "^2.13.2",
         "js-cookie": "^3.0.0",
+        "jsencrypt": "^3.2.1",
         "moment": "^2.29.1",
         "nprogress": "^0.2.0",
         "qs": "^6.9.2",
