--- a/cup/pom.xml
+++ b/cup/pom.xml
@@ -152,6 +152,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <!--测试配置-->
