--- a/cup/src/main/resources/application.yml
+++ b/cup/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
   application:
     name: cup
   profiles:
-    active: prod
+    active: dev
   security:
     loginType: JSON
   rabbitmq:
@@ -46,7 +46,7 @@ mybatis-plus:
 
 cup:
   # 是否开启演示模式
-  enableDemo: true
+  enableDemo: false
   # 验证码生成格式： math计算格式 char随机字符串
   captchaType: math
   # redis cache注解失效时间(单位：分)，默认60分钟
